Files/grammar.txt
LL gramatika

1)	<PROGRAM>		->	<FUNC_N>
2)	<FUNC_N>		->	<FUNC> <FUNC_N>
3)	<FUNC_N>		->	E 
4)	<VAR_DEF>		->	<TYPE> id <INIT>;
5)	<VAR_DEF>		->	auto id <INIT>;
6)	<INIT>			-> 	= <EXPR>
7)	<INIT>			->	E
8)	<TYPE>			->	int
9)	<TYPE>			->	double
10)	<TYPE>			-> 	string 
11)	<FUNC>			-> 	<TYPE> id <PAR_DEF_LIST> <DEC_OR_DEF>
12)	<DEC_OR_DEF>		->	<COMM_SEQ>
13)	<DEC_OR_DEF>		->	;
14)	<PAR_DEF_LIST>		->	( <PARAMS> )
15)	<PARAMS>		-> 	<TYPE> id <PARAMS_N>
16)	<PARAMS>		-> 	E
17)	<PARAMS_N>		-> 	, <TYPE> id <PARAMS_N>
18)	<PARAMS_N>		-> 	E

19)	<COMM_SEQ>		-> 	{ <STMT_LIST> }
20)	<STMT_LIST>		->	<STMT> <STMT_LIST>
21)	<STMT_LIST>		->	E
22)	<STMT>			->	if( <EXPR> ) <COMM_SEQ> <IF_N>
23)	<STMT>			->	for( <VAR_DEF> <EXPR>; <ASSIGN> ) <COMM_SEQ>
24)	<STMT>			->	<COMM_SEQ>
25)	<STMT>			->	<VAR_DEF>
26)	<STMT>			->	cin >> id <CIN_ID_N>;
27)	<STMT>			->	cout << <COUT_TERM>;
28)	<STMT>			->	<RETURN>
29)	<STMT>			->	id = <FCALL_OR_ASSIGN>
30) <FCALL_OR_ASSIGN>-> <EXPR> ;
31) <FCALL_OR_ASSIGN>-> id ( <TERMS> );


32)	<TERMS>		-> 	id <TERMS_N>
33)	<TERMS>		-> 	E
34)	<TERMS_N>		-> 	, id <TERMS_N>
35)	<TERMS_N>		-> 	E
36)	<ASSIGN>		->	id = <EXPR> 

37)	<CIN_ID_N>		-> 	>> id <CIN_ID_N>
38)	<CIN_ID_N>		-> 	E
39)	<COUT_TERM>		-> 	id <COUT_TERM_N>
40)	<COUT_TERM_N>	-> 	<< <COUT_TERM>
41)	<COUT_TERM_N>	-> 	E 
42)	<RETURN>		->	return <EXPR>;
43)	<IF_N>			->	else <COMM_SEQ>
44)	<IF_N>			->	E

Gramatika pro vyrazy

45) <EXPR>		->	( <EXPR> )
46) <EXPR>		->	term
47) <EXPR>		->	id
48) <EXPR>		->	id( )
49) <EXPR>		->	id( arg <ARG_N> )
50) <ARG_N>		->	, arg <ARG_N>
51) <ARG_N>		->	E
52) <EXPR>		->	<EXPR> + <EXPR>
53) <EXPR>		->	<EXPR> - <EXPR>
54) <EXPR>		->	<EXPR> * <EXPR>
55) <EXPR>		->	<EXPR> / <EXPR>
56) <EXPR>		->	<EXPR> < <EXPR>
57) <EXPR>		->	<EXPR> > <EXPR>
58) <EXPR>		->	<EXPR> <= <EXPR>
59) <EXPR>		->	<EXPR> >= <EXPR>
60) <EXPR>		->	<EXPR> == <EXPR>
61) <EXPR>		->	<EXPR> != <EXPR>
